<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">fitplus</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_1">운동 카운팅 방법 설정</string>
    <string name="title_2">가슴 : 운동 소분류 설정</string>
    <string name="title_3">운동 기록 : </string>
    <string name="title_4">운동 기록 결과</string>
    <string name="guide_counting_mode">운동 횟수를 세는 방법을 선택하세요.</string>
    <string name="guide_result_counter">운동한 횟수 : </string>
    
    <string name="counting_mode_1">번호판으로 횟수 세기</string>
    <string name="counting_mode_2">화면 터치로 횟수 세기</string>
    <string name="counting_mode_3">가속도 센서계 자동 세기</string>
    <string name="counter_confirm">확인</string>
    <string name="counter_cancel">취소</string>
    <string name="counter_delete">삭제</string>
    <string name="go_first_page">처음으로 돌아가기</string>
    <string name="go_second_page">운동종류 선택으로 돌아가기</string>
	
    <string-array name="chest_exercise">
        <item>플라이 푸쉬업</item>
        <item>디클라인 푸쉬업</item>
        <item>덤벨 프레스</item>
        <item>덤벨 플라이</item>
        <item>푸쉬업</item>
    </string-array>
    
    <string-array name="numberpad">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item></item>
        <item>0</item>
        <item></item>
    </string-array>

</resources>
